# SkatMinMax

./: CMakeLists.txt  README.md  hand.cpp  hand.h  main.cpp  minmax.cpp  minmax.h  skat.cpp  skat.h  tests.cpp
